# parry

./: .gitignore  .parryrc.toml  CHANGELOG.md  Cargo.toml  README.md  justfile
configs/: nestjs.toml  nextjs.toml  rust-axum.toml  vitejs.toml
crates/oparry-autofix/: Cargo.toml
crates/oparry-autofix/src/: fixer.rs  lib.rs  rules.rs
crates/oparry-autofix/tests/: integration_test.rs
crates/oparry-cli/: Cargo.toml
crates/oparry-cli/src/: commands.rs  lib.rs  main.rs  output.rs
crates/oparry-cli/src/commands/: check.rs  config.rs  hook.rs  init.rs  install.rs  watch.rs  wrap.rs
crates/oparry-core/: Cargo.toml
crates/oparry-core/src/: config.rs  error.rs  lib.rs  report.rs  rule.rs
crates/oparry-daemon/: Cargo.toml
crates/oparry-daemon/src/: bridge.rs  claude.rs  config.rs  lib.rs  main.rs  validator.rs
crates/oparry-parser/: Cargo.toml
crates/oparry-parser/src/: generic.rs  javascript.rs  javascript_complete.rs  lib.rs  rust.rs
crates/oparry-parser/tests/: javascript_complete_test.rs
crates/oparry-validators/: Cargo.toml
crates/oparry-validators/src/: accessibility.rs  components.rs  css.rs  imports.rs  lib.rs  performance.rs  react.rs  rust.rs  security.rs  tailwind.rs  testing.rs  typescript.rs
crates/oparry-watcher/: Cargo.toml
crates/oparry-watcher/src/: lib.rs
crates/oparry-wrapper/: Cargo.toml
crates/oparry-wrapper/src/: claude_wrapper.rs  ipc.rs  lib.rs  protocol.rs
crates/parry/: Cargo.toml
crates/parry-core/: Cargo.toml
crates/parry-core/src/: lib.rs
crates/parry-core/src/autofix/: config.rs  fixer.rs  mod.rs  rules.rs
crates/parry-core/src/parser/: generic.rs  javascript.rs  javascript_complete.rs  mod.rs  rust.rs
crates/parry-core/src/validators/: accessibility.rs  components.rs  css.rs  imports.rs  mod.rs  performance.rs  react.rs  rust.rs  security.rs  tailwind.rs  testing.rs  typescript.rs
crates/parry-core/src/watcher/: mod.rs
crates/parry-core/src/wrapper/: mod.rs
crates/parry/src/: main.rs
crates/parry/src/commands/: check.rs  config.rs  init.rs  run.rs  watch.rs
docs/: ARCHITECTURE.md  GUIDE.md  REFERENCE.md  ROADMAP.md
integrations/: README.md  oparryd-hook.cjs  oparryd-post-write.cjs  oparryd-start.cjs  package.json  parry-post-write.cjs  parryd-hook.cjs  parryd-start.cjs  setup.py
