[package]
name = "oparry-autofix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Auto-fix engine for Oparry - generates and applies code corrections"
documentation = "https://docs.rs/oparry-autofix"
keywords = ["autofix", "refactoring", "code-generation"]
categories = ["development-tools"]

[dependencies]
# Core dependencies
oparry-core = { version = "0.2", path = "../oparry-core" }
oparry-parser = { version = "0.2", path = "../oparry-parser" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Parsing
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

# Utilities
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = "1.34"
