[package]
name = "oparry-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Oparry - the agentic linter for AI-generated code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/oparry-cli"
keywords = ["cli", "linting", "validation", "code-quality"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "parry"
path = "src/main.rs"

[dependencies]
# Core
oparry-core = { version = "0.2", path = "../oparry-core" }
oparry-parser = { version = "0.2", path = "../oparry-parser" }
oparry-validators = { version = "0.2", path = "../oparry-validators" }
oparry-watcher = { version = "0.2", path = "../oparry-watcher" }
oparry-wrapper = { version = "0.2", path = "../oparry-wrapper" }

# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional
glob = "0.3"
dirs = "5.0"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
