[package]
name = "oparry-core"
version.workspace = true
edition.workspace = true
description = "Core types and traits for Parry - the agentic linter for AI-generated code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/oparry-core"
keywords = ["linting", "validation", "ai", "code-quality"]
categories = ["development-tools"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
# Note: SARIF crate is reserved, we implement manual SARIF with serde

# Tracing
tracing = { workspace = true }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
