[package]
name = "oparry-parser"
version.workspace = true
edition.workspace = true
description = "Multi-language parser for JavaScript, TypeScript, Rust, and more"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/oparry-parser"
keywords = ["parser", "javascript", "typescript", "rust"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Core
oparry-core = { version = "0.2", path = "../oparry-core" }

# Workspace dependencies - use correct package names (underscores)
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_semantic = { workspace = true }
oxc_traverse = { workspace = true }
oxc_allocator = { workspace = true }

# Rust
syn = { workspace = true }
quote = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync"] }

# Errors
thiserror = { workspace = true }

# Utilities
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
