[package]
name = "oparry-validators"
version.workspace = true
edition.workspace = true
description = "Validation rules for Tailwind, React, Rust, imports, accessibility, and security"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/oparry-validators"
keywords = ["validation", "linting", "tailwind", "react", "rust"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
# Core
oparry-core = { version = "0.2", path = "../oparry-core" }
oparry-parser = { version = "0.2", path = "../oparry-parser" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
