[package]
name = "oparry-watcher"
version.workspace = true
edition.workspace = true
description = "Real-time file watcher for Parry validation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/oparry-watcher"
keywords = ["watching", "filesystem", "hot-reload"]
categories = ["development-tools", "filesystem"]

[dependencies]
# Core
oparry-core = { version = "0.2", path = "../oparry-core" }

# Workspace dependencies
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
