[package]
name = "oparry-wrapper"
version.workspace = true
edition.workspace = true
description = "Claude Code integration wrapper with IPC protocol"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/oparry-wrapper"
keywords = ["ipc", "wrapper", "claude", "interception"]
categories = ["development-tools"]

[dependencies]
# Core
oparry-core = { version = "0.2", path = "../oparry-core" }
oparry-validators = { version = "0.2", path = "../oparry-validators" }
oparry-parser = { version = "0.2", path = "../oparry-parser" }
oparry-autofix = { version = "0.2", path = "../oparry-autofix" }

# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
