[package]
name = "oalacea-parry"
version.workspace = true
edition.workspace = true
description = "CLI for Parry - the agentic linter for AI-generated code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "parry"
path = "src/main.rs"

[dependencies]
# Core
oalacea_parry_core = { version = "0.3", path = "../parry-core", package = "oalacea-parry-core" }

# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

# Additional
glob = "0.3"
walkdir = "2"
dirs = "5.0"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
